# ModulesNet

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.cache/clangd/index/: argsParser.cpp.3C34EB036A5E8A51.idx  argsParser.h.89C39A30A3C1D4FE.idx  main.cpp.3821358ADABDBDA7.idx
compiler/: CMakeLists.txt
compiler/include/: argsParser.h  debugger.h  file.h  filesManager.h  filesValidator.h
compiler/lang/include/: cleaner.h  debuggerSingleton.h  headerParse.h  include.h  langParser.h  lineParser.h
compiler/lang/source/: cleaner.cpp  debuggerSingleton.cpp  headerParse.cpp  langParser.cpp  lineParser.cpp
compiler/source/: argsParser.cpp  file.cpp  filesManager.cpp  filesValidator.cpp  main.cpp
examples/class-example/application/: main.mnet
examples/class-example/module/: calculator.mnet
examples/game-api/dev-api/: mygame_api.mnet
examples/game-api/modification/: main.mnet
examples/hello-world-multimodules/app-files/: main.mnet
examples/hello-world-multimodules/console-printer-module/: api.mnet  module.mnet
examples/hello-world-multimodules/helloworld-printer-module/: api.mnet  module.mnet
lang/include/: cleaner.h  langParser.h  token.h
lang/source/: cleaner.cpp
